deployment/kustomize/overlays/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alin-final-task-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: alin.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alin-final-task-service
                port:
                  name: http
  tls:
    - hosts:
      - alin.dacdevops.ru
      secretName: alin-final-task-cert
